<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>automenta</groupId>
    <artifactId>narchy</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>narchy</name>
    <url>http://github.com/automenta/narchy</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>util</module>
        <module>ui</module>
        <module>logic</module>
        <module>nal</module>
        <module>gp</module>
        <module>lab</module>
        <module>app</module>
        <module>os</module>
        <module>test</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>http://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>jenkins-ci</id>
            <url>http://repo.jenkins-ci.org/releases</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>12</release>
                </configuration>
            </plugin>


            <!-- This is just to make sure the class is set as main class to execute from the jar-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
<!--                            <minimizeJar>true</minimizeJar>-->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!--                                    <mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>-->
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- https://github.com/STAMP-project/pitmp-maven-plugin-->
<!--            usage: mvn eu.stamp-project:pitmp-maven-plugin:run-->
            <plugin>
                <groupId>eu.stamp-project</groupId>
                <artifactId>pitmp-maven-plugin</artifactId>
                <version>1.3.6</version>
                <configuration>

                    <mutationEngine>pit</mutationEngine>
<!--                    <mutationEngine>descartes</mutationEngine>-->
                    <exportLineCoverage>true</exportLineCoverage>
                    <withHistory>true</withHistory>
                    <testPlugin>"junit5"</testPlugin>
                    <useSlf4j>true</useSlf4j>
                    <useClasspathJar>true</useClasspathJar>
                    <targetClasses>
                        <param>jcog.signal*</param>
<!--                        <param>jcog.pri*</param>-->
<!--                        <param>nars*</param>-->
                    </targetClasses>
                    <targetModules>
                        <param>util</param>
<!--                        <param>logic</param>-->
<!--                        <param>nal</param>-->
                    </targetModules>
                    <verbose>true</verbose>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
